# repak-stellarblade

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  rust-toolchain.toml
.github/workflows/: release.yml
Scripts/: fixLastPatchMods.bat  fixMesh.bat  repackMod.sh  repakFolder.bat  repakMod.bat  unpakMod.bat  unrepak.bat
imhex_patterns/: encrypted_pak.hexpat  unencrypt_idx.py
mesh-patcher/: Cargo.toml
mesh-patcher/src/: main.rs
oodle_loader/: Cargo.toml
oodle_loader/src/: lib.rs
repak/: Cargo.toml
repak-gui/: Cargo.toml  build.rs
repak-gui/src/: archive_mods.rs  file_table.rs  install_mod.rs  ios_widget.rs  main.rs  pak_logic.rs  utils.rs  utoc_utils.rs  welcome.rs
repak-gui/src/data/: ali_to_nati_convert.py  aliricia_format.txt  character_data.json  character_data.md  convert_from_md.py
repak-gui/src/install_mod/: install_mod_logic.rs
repak-gui/src/install_mod/install_mod_logic/: archives.rs  iotoc.rs  pak_files.rs  patch_meshes.rs
repak-gui/wix/: main.wxs
repak/src/: data.rs  entry.rs  lib.rs  pak.rs
repak_cli/: Cargo.toml
repak_cli/Scripts/: fixLastPatchMods.sh  repakMod.bat  unpackMod.sh  unpakMod.bat
repak_cli/src/: main.rs  uasset_fix.rs
repak_cli/wix/: main.wxs
simd_str_cmp/: Cargo.toml
simd_str_cmp/benches/: compare_strings.rs
simd_str_cmp/src/: lib.rs
