[workspace]
resolver = "2"
members = ["repak", "repak_cli"]

[workspace.package]
repository = "https://github.com/natimerry/repak-rivals"
authors = ["spuds", "trumank","natimerry"]
license = "MIT OR Apache-2.0"
version = "0.5.4"
edition = "2021"
keywords = ["marvel-rivals","unreal-engine", "pak", "unrealpak"]


[profile.release]
lto = "thin"
strip = true
opt-level = 3

[workspace.dependencies]
aes = "0.8.4"
base64 = "0.22.1"
strum = { version = "0.26", features = ["derive"] }
sha1 = "0.10"
hex = "0.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

