[package]
name = "mesh-patcher"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true

[dependencies]
eframe = "0.31.0"
egui = "0.31.0"
rfd = "0.15.2"
uasset-mesh-patch-rivals = {git = "https://github.com/natimerry/uasset-mesh-patch-rivals"}
xdelta3 = "0.1.5"
