[package]
name = "repak-gui"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true

[dependencies]
eframe = "0.31.0"
eg = "0.1.2"
egui_flex = "0.3.0"
env_logger = "0.11.6"
rfd = "0.15.2"
log = "0.4.26"
egui_virtual_list = "0.7.0"
repak = { path = "../repak" }
aes.workspace = true
hex.workspace = true
base64.workspace = true
