[package]
name = "repak-gui"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true

[dependencies]
eframe = "0.31.0"
egui_flex = "0.3.0"
env_logger = "0.11.6"
rfd = "0.15.2"
log = "0.4.26"
repak = { path = "../repak" }
aes.workspace = true
hex.workspace = true
base64.workspace = true
egui_extras = { version = "0.31.0", features = ["all_loaders"] }
sha2 = "0.10.8"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
dirs = "6.0.0"
