[package]
name = "simd_str_cmp"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true

[dependencies]
rayon = "1.10.0"
once_cell = "1.20.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "compare_strings"
harness= false